Changed back to png images for compatibility.

--- a/docs/asy/Makefile
+++ b/docs/asy/Makefile
@@ -1,7 +1,13 @@
-all: ../images/oriented-tree.svg ../images/oriented-forest.svg
 
-../images/oriented-tree.svg: oriented-tree.asy
-	asy oriented-tree.asy -f svg -o ../images/
+all: ../images/oriented-tree.png ../images/oriented-forest.png
 
-../images/oriented-forest.svg: oriented-forest.asy
-	asy oriented-forest.asy -f svg -o ../images/
+
+../images/oriented-tree.png: oriented-tree.asy
+	asy oriented-tree.asy -o tmp.eps
+	convert -density 300 -units PixelsPerInch tmp.eps ../images/oriented-tree.png
+	rm -f tmp.eps
+
+../images/oriented-forest.png: oriented-forest.asy
+	asy oriented-forest.asy -o tmp.eps
+	convert -density 300 -units PixelsPerInch tmp.eps ../images/oriented-forest.png
+	rm -f tmp.eps
