Made simulate capable of multiple calls.
Broke up the simulate function so that it can be called many
times to facilitate interruption in Python.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,5 @@
-CFLAGS=
+#CFLAGS=
+CFLAGS=-Wall -Wextra
 LDFLAGS=-lm -lgsl -lgslcblas
 MAIN_LDFLAGS=${LDFLAGS} -lconfig 
 ALL_SRC=ercs.c util.c kdtree.c torus.c
