Added test file and change to torus_diameter.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,14 +5,18 @@ MAIN_LDFLAGS=${LDFLAGS} -lconfig
 ALL_SRC=ercs.c util.c kdtree.c torus.c
 CC=cc
 
-all_test: test_torus test_kdtree
+all_test: test_torus test_kdtree test_ercs
 
 check: all_test
-	./test_kdtree
 	./test_torus
+	./test_kdtree
+	./test_ercs
 
 ercs: main.c ${ALL_SRC} *.h
 	${CC} ${CFLAGS} -o ercs main.c ${ALL_SRC} ${MAIN_LDFLAGS} 
+
+test_ercs: test_ercs.c ${ALL_SRC}
+	${CC} ${CFLAGS} -o test_ercs test_ercs.c ${ALL_SRC} ${LDFLAGS} 
 
 test_torus: test_torus.c ${ALL_SRC}
 	${CC} ${CFLAGS} -o test_torus test_torus.c ${ALL_SRC} ${LDFLAGS} 
