Initial test-case for ercs completed.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 #CFLAGS=
-CFLAGS=-Wall -Wextra
+CFLAGS=-g -Wall -Wextra
 LDFLAGS=-lm -lgsl -lgslcblas
 MAIN_LDFLAGS=${LDFLAGS} -lconfig 
 ALL_SRC=ercs.c util.c kdtree.c torus.c
@@ -28,4 +28,4 @@ tags:
 	etags *.c *.h
 
 clean:
-	rm -f ercs test_torus test_kdtree
+	rm -f ercs test_torus test_kdtree test_ercs
