--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include example.py tests.py
-include *.txt *.rst
+include *.txt 
 recursive-include lib main.c test*.c *.h Makefile 
-recursive-include docs *.html *.css *.png *.gif
+recursive-include docs/build *.html *.css *.png 
