Fixed kdtree_bucket_size 0 allocation bug.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include example.py tests.py
+include tests.py
 include *.txt 
 recursive-include lib main.c test*.c *.h Makefile 
 recursive-include docs/build *.html *.css *.png 
