--- a/lib/dev.cfg
+++ b/lib/dev.cfg
@@ -1,7 +1,7 @@
 
 recombination_probabilities = [0.1, 0.2, 0.4];
 sample = ([1.0, 0.0], [5.0, 9.0], [0.0, 0.0], [5.0, 0.0], [0.0, 2.0], [0.0, 1.0]);
-torus_edge=20.0;
+torus_diameter=20.0;
 max_time = 1.0e8;
 num_parents = 2;
 random_seed = 1;
@@ -25,6 +25,6 @@ events = (
 );
 
 
-max_kdtree_insertions = 10000;
-kdtree_bucket_size = 1;
+max_kdtree_insertions = 100000;
+kdtree_bucket_size = 512;
 max_lineages = 100; 
