Added a layer of error checking to _ercs.

--- a/lib/dev.cfg
+++ b/lib/dev.cfg
@@ -2,8 +2,8 @@
 recombination_probabilities = [0.1, 0.2, 0.4];
 sample = ([1.0, 0.0], [5.0, 9.0], [0.0, 0.0], [5.0, 0.0], [0.0, 2.0], [0.0, 1.0]);
 torus_diameter=20.0;
-max_time = 1.0e8;
-num_parents = 2;
+max_time = 0.0;
+num_parents = -3;
 random_seed = 1;
 
 
